All basic functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
 
     <string name="menu_nav_1">Dashboard</string>
     <string name="menu_nav_2">Profile</string>
-    <string name="menu_nav_3">Report</string>
+    <string name="menu_nav_3">Generate Report</string>
     <string name="menu_nav_4">Contact Us</string>
 
     <string name="the_concept">How we conceptualize a ship inspection-preparation is much different from conventional methods. We work with companies, training institutes or Pre-Vetting Inspectors to develop their inspection processes and improve results. There’s a ton of Free stuff for seafarers.\nTo know how we do it, and the many benefits involved, view a demo, or contact us. We shall be happy to personalize a demo exclusively for you!</string>
